--- a/peak1.css
+++ b/peak1.css
@@ -1,34 +1,55 @@
+@media screen and (min-width:1100px) and (min-height:600px){
+    body{
+        background-size: 50% 100%;
+      
+    }
+    #item31{
+        margin-left:55%;
+        
+        
+    }
+}
 @media screen and (min-width:1024px){
     li a{
         padding:0px 50px 0px 50px;
         font-size:22px;
     }
     .item1{
-        font-size: 44px;
+        font-size: 40px;
+        padding:50px 0px 50px 0px;
     }
     #item31{
         width:500px;
-        height:300px;
+        padding:40px 0px 20px;
+        top:40%;
+        transform: translateY(-40%);
     }
     #item32{
         width:500px;
-        height:300px;
+        padding:40px 0px 40px;
+        top:40%;
+        transform: translateY(-40%);
+    }
+    .boomtwo{
+        padding-top:20px;
     }
 }
 @media screen and (max-width:1023px){
     li a{
-        padding:0px 40px 0px 40px;
+        padding:0px 50px 0px 50px;
         font-size:22px;
     }
     #item31{
         width:500px;
-        height:300px;
-        padding:50px 0px 20px;
+        padding:60px 0px 20px;
+        top:40%;
+        transform: translateY(-40%);
     }
     #item32{
         width:500px;
-        height:400px;
-        padding:50px 0px 20px;
+        padding:40px 0px 20px;
+        top:40%;
+        transform: translateY(-40%);
     }
     #username, #password, #rusername, #email, #password2{
         width:60%;
@@ -36,154 +57,142 @@
         margin-bottom:20px;
     }
     .boomtwo{
-        padding-top: 10px;
+        padding-top: 20px;
     }
     .item1{
-        font-size: 42px;
+        font-size: 40px;
     }
 }
 @media screen and (max-width:900px){
     #item31{
-        width:600px;
-        height:350px;
-        padding:50px 0px 20px;
+        width:500px;
+        padding:40px 0px 15px;
     }
     #item32{
-        width:600px;
-        height:400px;
-        padding:50px 0px 20px;
-    }
-    .item1{
-        font-size: 38px;
+        width:500px;
+        padding:40px 0px 20px;
     }
     li a{
         padding:0px 30px 0px 30px;
         font-size:20px;
     }
+    .boomtwo{
+        padding-top: 10px;
+    }
+   
 }
 @media screen and (max-width:770px){
-    #item31{
-        width:500px;
-        height:350px;
-        padding:50px 0px 20px;
-    }
-    #item32{
-        width:500px;
-        height:400px;
-        padding:50px 0px 20px;
-    }
     .item1{
-        font-size: 34px;
+        font-size: 36px;
     }
     li a{
-        padding:0px 15px 0px 17px;
+        padding:0px 14px 0px 14px;
         font-size:20px;
+    }
+    #password{
+        margin-bottom:3px;
     }
 }
 @media screen and (max-width:600px){
     #item31{
         width:400px;
-        height:350px;
-        padding:50px 0px 20px;
+        padding:40px 0px 0px;
     }
     #item32{
         width:400px;
-        height:400px;
-        padding:50px 0px 20px;
+        padding:40px 0px 20px;
     }
     .item1{
         font-size: 30px;
     }
     li a{
-        padding:0px 10px 0px 10px;
-        font-size:17px;
+        padding:0px 12px 0px 12px;
+        font-size:18px;
 
     }
+   
     .gmail,.linkedin{
         font-size:0.95em;
     }
-    .typetwo{
+    /* .typetwo{
         width:120px;
-    }
+    } */
 
 
 }
-@media screen and (max-width:500px){
+@media screen and (max-width:540px){
     #item31{
         width:400px;
-        height:350px;
-        padding:50px 0px 20px;
+        padding:30px 0px 0px;
+        position:relative;
+        top:8%;
+        transform: translateY(-8%);
+       
     }
+
     #item32{
         width:400px;
-        height:400px;
-        padding:50px 0px 20px;
+        padding:30px 0px 20px;
+        position:relative;
+        top:20%;
+        transform: translateY(-20%);
+    }
+    .typetwo{
+        margin-top:15px;
     }
     .grid-container{
-        grid-template-rows: 130px 70px auto 90px;
+        grid-template-rows: 110px 70px auto 90px;
     }
     .item1{
         font-size: 25px;
-    }
-    .but{
-        bottom:52.5px;
+        padding:52.5px 0px 52.5px 0px;
     }
     li a{
         padding:0px 2px 0px 2px;
         font-size:17px;
-
     }
-    img{
-        max-width:100%;
-        padding:20px 15px 20px 0px;
-       
-    }
+    
     #allow{
         display:none;
     }
     .dropbtn{
         display:block;
     }
-    .dropbtn:hover .content{
+    .dropdown:hover .content{
         display:block;
+    }
+    .dropdown:hover .dropbtn{
+        color:gray;
+    }
+    .content a:hover{
+        background-color: tomato;
+    }
+    #username, #password, #rusername, #email, #password2{
+        margin-bottom:3px;
     }
 }
 @media screen and (max-width:410px){
     #item31{
         width:100%;
-        height:350px;
         padding:50px 0px 20px;
     }
     #item32{
         width:100%;
-        height:400px;
         padding:50px 0px 20px;
     }
     .gmail,.linkedin{
         font-size:0.9em;
     }
-    .but{
-        bottom:55px;
-    }
-    .but1{
-       display: none;
-        position: relative;
-        bottom:60px;
-        font-size:0.9em;
-    }
-    img{
-        padding:20px 10px 20px 0px;
-    }
     .item1{
-        text-align: left;
-        font-size:20px;
+        font-size:25px;
     }
-   
+    .content a{
+        padding:25px 100px 25px 30px ;
+    }
 }
 
 @media screen and (max-width:330px){
     .item1{
-        text-align: left;
         font-size:18.5px;
         
     }
@@ -195,15 +204,10 @@
     .item1{
         text-align: center;
     }
-    .but1{
-        display: inline;
-         position: relative;
-         bottom:54.5px;
-         font-size:21px;
-     }
-    .but{
-        display:none;
-    } 
+    .content a{
+        padding:25px 80px 25px 30px ;
+    }
+    
 }
 @media screen and (max-width:250px){
     .but1{
@@ -212,7 +216,7 @@
 }
 @media screen and (max-width:223px){
     .item1{
-        text-align: left;
+        text-align: center;
     }
     .but1{
          bottom:56px;
